...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/neighbour_details_firstname_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="4dp"
...
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/neighbour_details_favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/ic_star_border_black_24dp"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/neighbour_details_contacts_cardview"
...
